@@ -4,6 +4,9 @@ This file describes the changes to the Log for C++ library. See the CVS reposito
 	* src/RemoteSyslogAppender.cpp: fixed log facility in _append(), as
 	reported by Derek Atkins.
 
+	* src/PropertyConfiguratorImpl.cpp, src/SimpleConfigurator.cpp:
+	multiply syslog facility value by 8.
+
 2002-09-17 Bastiaan Bakker <bastiaan.bakker@lifeline.nl>
 	* log4cpp.spec.in: fix relocatability of log4cpp-devel by patching
 	lib/liblog4cpp.la and bin/log4cpp-config in %post. Unfortunately
